Kcov (5):
	* Rename path-matching to pattern matching (which is what it does)
	  and set it up using long options.

	* Parse options with getopt

	* Don't escape all multibyte characters in the report. That will
	  break display of UTF-8 etc (Igor Murzov)

	* Improve cmake packaging support (Igor Murzov)

	-- Simon Kagstrom <simon.kagstrom@gmail.com>

Kcov (4):
	* Build system is now based on cmake (Igor Murzov)

	* Add MIPS32, ARM and PowerPC architecture support. This is untested though
	  and might very well not work at all. 
	  
	* Add -t option to set the title of the program to test (otherwise it
	  will be the filename) 

	* Refactored the architecture support to allow running i386 programs
	  on x86_64 machines, and easier add other architectures

	* Make it possible to collect coverage from multiple programs in a
	  single directory, useful for example when running a test suite

	* Add coverage color to the header as well

	* Misc refactoring  

	-- Simon Kagstrom <simon.kagstrom@gmail.com>, Tue Dec  7 18:20:28 CET 2010

Kcov (3):
	* Various bug fixes

	* Add ability to trace running processes by PID

	* Fix copyright headers

	-- Simon Kagstrom <simon.kagstrom@gmail.com>, Sat Nov 13 08:13:03 CET 2010

Kcov (2):
	* Misc fixes

	* Add ability to specify low/high limits

	* Add state saving between runs. Re-starting the same program
	  will then add to existing coverage instead of starting from
	  scratch.

	* Link to web page in the report

	* Add option to sort by percentage or file name

	-- Simon Kagstrom <simon.kagstrom@gmail.com>, Sun Oct 24 09:15:39 CEST 2010

Kcov (1):
	* Initial release

	-- Simon Kagstrom <simon.kagstrom@gmail.com>