@@ -1,4 +1,7 @@
 Kcov (5):
+	* Switch from libdwarf to libdw (from elfutils) for building
+	  kcov. libdw is a bit more logical than libdwarf.
+
 	* Rename path-matching to pattern matching (which is what it does)
 	  and set it up using long options.
 
